--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,17 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.3</spring-cloud.version>
+		<spring-framework.version>6.0.10-SNAPSHOT</spring-framework.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>repository.spring.snapshot</id>
+			<name>Spring Snapshot Repository</name>
+			<url>https://repo.spring.io/snapshot</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
